--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </nav>
       </div>
       <div class="main">
-        <div class="hamburger">
+        <!-- <div class="hamburger">
           <img class="ham" src="hamburger-menu.svg" alt="img" width="30" />
           <img class="cross" src="cross.png" alt="img" />
-        </div>
+        </div> -->
         <div class="infocontainer">
           <div class="devinfo">
             <div class="hello">Hey,I Am</div>
@@ -43,7 +43,7 @@
               >
                 <button>Download CV</button></a
               >
-              <a href="contact.html"> <button>Contact Me</button></a>
+              <a href="intro.html"> <button>About Me</button></a>
             </div>
           </div>
           <div class="devpic">
