Change the link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="buttons">
               <a
-                href="https://drive.google.com/file/d/1Zkj5I5cVx-fhC7soKVlDFI63yoigb9gv/view?usp=sharing"
+                href="https://drive.google.com/file/d/1lof0rfmdZb0a7PpGb7nsnCisOI_mLxPx/view?usp=share_link"
               >
                 <button>Download CV</button></a
               >
